<resources>
    <string name="app_name">Home Services</string>
    <string name="btn_Cadastrado">Já Tenho Conta</string>
    <string name="btn_Cadastrar">Sou Novo Aqui</string>
    <string name="btn_Next">PRÓXIMO</string>
    <string name="txt_headerInicio">Olá</string>
    <string name="txt_email">EMAIL</string>
    <string name="txt_senha">SENHA</string>
    <string name="txt_consenha">CONFIRMAR SENHA</string>
    <string name="txt_nome">NOME</string>
    <string name="txt_cpf">CPF</string>
    <string name="txt_sexo">SEXO</string>
    <string name="txt_estado">ESTADO</string>
    <string name="txt_cidade">CIDADE</string>
    <string name="txt_cep">CEP</string>
    <string name="txt_userNama">NOME DE USUÁRIO</string>
    <string name="txt_telefone">CELULAR</string>
    <string name="txt_NumeResidencia">NÚMERO DA RESIDENCIA</string>
    <string name="txt_rua">RUA</string>
    <string name="txt_data">DATA DE NASCIMENTO</string>
    <string name="txt_especializacao">ESPECIALIZAÇÃO</string>
    <string name="txt_Login">FAÇA SEU LOGIN</string>
    <string name="F_pass">Esqueci minha senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrando">CADASTRAR</string>
    <string name="btn_irCadastro">Faça seu cadastro</string>
    <string name="title_activity_pag_login">PagLogin</string>
    <string name="tipo_cliente">Cliente:</string>
    <string name="tipo_prestador">Prestador:</string>
    <string name="title_escolhaPerfil">Qual seu perfil ?</string>
    <string name="title_cadastro">Bem Vindo</string>
    <string name="title_activity_pag_inicial">PagInicial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_editar">EDITAR</string>
    <string name="btn_deletar">DELETAR</string>
    <string name="menu_Loja">Minha Loja</string>
    <string name="menu_EditDel">Perfil</string>
    <string name="menu_Pedidos">Pedidos</string>
    <string name="qualnome">Qual é o seu nome?</string>
    <string name="qualcpf">Qual é o seu CPF?</string>
    <string name="qualdata">Qual é sua data de nascimento?</string>
    <string name="qualemail">Qual é seu email?</string>
    <string name="qualtel">Qual é seu número de celular?</string>
    <string name="qualuser">Qual é seu nome de usuário?</string>
    <string name="qualpass">Qual é sua senha?</string>
    <string name="qualfoto">Escolha uma foto para seu perfil</string>
    <string name="qualitabixoSecho">Qual é o seu sexo?</string>

    <string-array name="eitabixoSecho">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="title_activity_pagina_usuario">Home Service</string>

    <string name="menu_home">Home</string>
    <string name="menu_minhaLoja">Meu Serviço</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_categoria">Categoria</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_listar">Lista</string>
    <string name="txt_edit_message">Digite sua mensagem aqui</string>
    <string name="menu_endereco">Endereço</string>
    <string name="menu_editar_perfil">Editar Perfil</string>
    <string name="cadastro_localizacao">Para finalizar o cadastro de seus dados pessoais, precisamos saber a sua localização</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="n_mero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="logradouro">Logradouro</string>
    <string name="msgOk">Ok</string>
    <string name="title_activity_maps">Map</string>
    <string name="localizacao_atual">Localização Atual</string>
    <string name="btn_filtrar">FILTRAR</string>
    <string name="destino">Destino</string>
    <string name="procurar_rota">Procurar rota</string>
    <string name="vizualizar_rota">Vizualizar Rota</string>
    <string name="menu_Mensagem">Mensagens</string>
    <string name="menu_Mensagems">Mensagens ○</string>
</resources>