<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_pedidos"
            android:iconTint="@color/colorlaranja"
            android:iconTintMode="add"
            android:title="@string/menu_Pedidos"
            android:visible="true" />


        <item
            android:id="@+id/nav_loja"
            android:icon="@drawable/ic_loja_2"
            android:title="@string/menu_Loja" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:iconTint="@color/colorlaranja"
            android:title="@string/menu_EditDel"
            android:visible="true" />
    </group>
</menu>