<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".PagEditarUser">

    <EditText
        android:id="@+id/userNameEdit"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_userNama"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/senhaEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/userNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeEdit" />

    <EditText
        android:id="@+id/nomeEdit"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_nome"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/emailEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="375dp"
        android:layout_height="36dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/btn_editar"
        android:textAlignment="center"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nomeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/senhaEdit"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_senha"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/telEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEdit" />

    <EditText
        android:id="@+id/telEdit"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_telefone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cpfEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaEdit" />

    <EditText
        android:id="@+id/cpfEdit"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_cpf"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/idadeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telEdit" />

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="92dp"
        android:background="?attr/actionModeSplitBackground"
        android:onClick="Edit"
        android:text="@string/btn_editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idadeEdit" />

    <EditText
        android:id="@+id/idadeEdit"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_data"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpfEdit" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/title_cadastro"
        android:textAlignment="center"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>