<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    tools:context=".ui.localizacao.LocalizacaoFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Olá! "
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Para facilitar o seu processo, nós iremos te redirecionar para o Google Maps com a rota para o local do seu serviço já traçada."
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Basta preencher os campos abaixo."
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_source"
            android:hint="@string/localizacao_atual"
            android:padding="20dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_destination"
            android:hint="@string/destino"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_track"
            android:background="@color/colorAccent"
            android:text="@string/procurar_rota"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</LinearLayout>